# api/app/Http/Controllers/OTPCodeController.php
@@ -6,7 +6,9 @@ use App\Http\Requests\GenerateOTPCodeRequest;
 use App\Http\Requests\VerifyOTPCodeRequest;
 use App\Models\OTPCode;
 use App\Models\User;
+use Carbon\Carbon;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\RateLimiter;
 
 class OTPCodeController extends Controller
 {
@@ -14,25 +16,76 @@ class OTPCodeController extends Controller
     public function generate(GenerateOTPCodeRequest $request)
     {
 
-        $type = $request->input('type'); // email or phone
+        $type = $request->get('type'); // email or phone
+
+        $key = 'otp-code-generate:' . $request->ip;
+
+        $executed = RateLimiter::attempt($key, $maxAttempts = 5, function () {}, $decaySeconds = 300, $perMinute = 2);
+
+        if (!$executed)
+            return response()->json(['message' => __('errors.toManyAttempts')], 429);
+
+        $user = User::firstWhere($type, $request->get($type));
+
+        if ($user->OTPCode) {
+            $expires_at = $user->OTPCode->expires_at;
+
+            $is_available = Carbon::parse($expires_at)->timestamp - time() > 0;
+
+            if ($is_available)
+                return response()->json(['message' => 'ok', 'expires_at' => $expires_at]);
+
+            $user->OTPCode->delete();
+        }
 
         $code = random_int(100000, 999999);
 
-        //user
+        $expires_at = Carbon::now()->addSeconds(120);
 
-        OTPCode::firstOrCreate([
-            $type => $request->get($type)
-        ], [
-            'code' => $code,
-            'expires_at' => '',
-            'type' => $type
-        ]);
+        $user->OTPCode()->create(compact(['code', 'type', 'expires_at']));
+
+        return response()->json(['message' => 'ok', 'expires_at' => $expires_at]);
     }
 
 
     public function verify(VerifyOTPCodeRequest $request)
     {
-        // $user = User::first();
-        // $token = auth()->claims(['foo' => 'bar'])->login($user);
+        $type = $request->get('type'); // email or phone
+
+        $key = 'otp-code-verify:' . $request->ip;
+
+        $executed = RateLimiter::attempt($key, $maxAttempts = 5, function () {}, $decaySeconds = 300, $perMinute = 2);
+
+        if (!$executed)
+            return response()->json(['message' => __('errors.toManyAttempts')], 429);
+
+        $user = User::firstWhere($type, $request->get($type));
+
+        if ($user->otpCode) {
+
+            if ($user->OTPCode->code === $request->get('code')) {
+
+                $expires_at = $user->OTPCode->expires_at;
+
+                $is_available = Carbon::parse($expires_at)->timestamp - time() > 0;
+
+                if ($is_available) {
+                    $token = auth()->claims(['foo' => 'bar'])->login($user);
+
+                    $ttl = auth()->factory()->getTTL() * 60;
+                    $expires_at = Carbon::now()->addSeconds($ttl)->toString();
+
+                    $user->otpCode->delete();
+
+                    return response()->json(compact('token', 'expires_at'));
+                }
+
+                return response()->json(['message' => __('errors.OTPCodeExpired')], 400);
+            }
+
+            return response()->json(['message' => __('errors.OTPCodeIncorrect')], 400);
+        }
+
+        return response()->json(['message' => __('errors.OTPCodeNotfound')], 400);
     }
 }
