# api/app/Models/OTPCode.php
@@ -8,4 +8,8 @@ use Illuminate\Database\Eloquent\Model;
 class OTPCode extends Model
 {
     use HasFactory;
+
+    protected $table = 'otp_codes';
+
+    public $fillable = ['code','expires_at','type'];
 }
